# lime-using-gpu

./: .gitignore  CMakeLists.txt  CMakePresets.json  M3_DESIGN.md  README.md  run_m1_eval.bat  run_m2_eval.bat  run_m3_eval.bat
.github/: CONTRIBUTING.md  pull_request_template.md
scripts/: compare_and_validate.py  compare_surrogates.py  convert_timings_sweep.py  cpu_reference.py  cpu_surrogate.py  explain_instance.py  generate_X_bin.py  gpu_surrogate_to_npz.py  plot_results.py  save_outputs.py  surrogate_train.py  train_model.py
src/: kernels.cu  kernels.h  m3_kernels.cu  m3_kernels.h  main.cu  main_m3.cu  utils.h
